syntax = "proto3";

import "google/protobuf/wrappers.proto";

service Getter {
	rpc GetValue (GetRequest) returns (GetResponse);
	rpc GetAllValues (GetAllValuesRequest) returns (GetAllValuesReresponse);
}

message GetRequest {
	string key = 1;
}

message GetResponse {
	google.protobuf.StringValue value = 1;
}

message GetAllValuesRequest {
}

message KeyValuePair {
	string key = 1;
	google.protobuf.StringValue value = 2;
}

message GetAllValuesReresponse {
	repeated KeyValuePair values = 1;
}

